fix: Merge paging and sorting endpoint for EmployeeEntity